--- a/src/Components/Countries/Countries.css
+++ b/src/Components/Countries/Countries.css
@@ -3,3 +3,10 @@
     grid-template-columns: repeat(3, 1fr);
     gap: 10px;
 }
+.visited-css{
+    background-color: tomato;
+
+}
+.non-visited{
+    background-color: darksalmon;
+}
